--- a/apps/dashboard/apps/dashboard/index.html
+++ b/apps/dashboard/apps/dashboard/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MoonCode | Dashboard</title>
   </head>
-  <body class="bg-neutral-950">
+  <body
+    class="bg-neutral-100 transition duration-300 ease-in-out dark:bg-neutral-950"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
