refactor: dashboard - installed react router v7 in declarative mode to use some basic routing features -  refactored the folder structure for a better clarity - moved the api url in the trpc instantiation in an env variable

--- a/apps/dashboard/index.html
+++ b/apps/dashboard/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="moon.svg" />
     <link href="/src/index.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoonCode | Dashboard</title>
+    <title>MoonCode</title>
   </head>
   <body
     class="bg-neutral-100 transition duration-300 ease-in-out dark:bg-neutral-950"
