feat: styles - added new styles in the globals.css of the ui package - removed the main layout from the auth pages (login and sign up)

--- a/apps/dashboard/index.html
+++ b/apps/dashboard/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="moon.svg" />
-    <link href="/src/index.css" rel="stylesheet" />
+    <link href="./src/index.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MoonCode</title>
   </head>
-  <body
-    class="bg-neutral-100 transition duration-300 ease-in-out dark:bg-neutral-950"
-  >
+  <body class="font-sans transition duration-300 ease-in-out">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
